--- a/minecraft.vcxproj
+++ b/minecraft.vcxproj
@@ -151,6 +151,7 @@
   <ItemGroup>
     <ClCompile Include="src\Application.cpp" />
     <ClCompile Include="src\Camera.cpp" />
+    <ClCompile Include="src\Material.cpp" />
     <ClCompile Include="src\Mesh.cpp" />
     <ClCompile Include="src\openGL\GLDebugMessageCallback.cpp" />
     <ClCompile Include="src\glm\detail\glm.cpp" />
@@ -313,6 +314,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Camera.h" />
+    <ClInclude Include="src\Material.h" />
     <ClInclude Include="src\Mesh.h" />
     <ClInclude Include="src\openGL\GLDebugMessageCallback.h" />
     <ClInclude Include="src\glm\common.hpp" />
