--- a/minecraft.vcxproj
+++ b/minecraft.vcxproj
@@ -152,6 +152,7 @@
     <ClCompile Include="src\Application.cpp" />
     <ClCompile Include="src\BlockMesh.cpp" />
     <ClCompile Include="src\Camera.cpp" />
+    <ClCompile Include="src\Context.cpp" />
     <ClCompile Include="src\Material.cpp" />
     <ClCompile Include="src\Mesh.cpp" />
     <ClCompile Include="src\openGL\GLDebugMessageCallback.cpp" />
@@ -318,6 +319,7 @@
   <ItemGroup>
     <ClInclude Include="src\BlockMesh.h" />
     <ClInclude Include="src\Camera.h" />
+    <ClInclude Include="src\Context.h" />
     <ClInclude Include="src\Material.h" />
     <ClInclude Include="src\Mesh.h" />
     <ClInclude Include="src\openGL\GLDebugMessageCallback.h" />
