--- a/minecraft.vcxproj.filters
+++ b/minecraft.vcxproj.filters
@@ -93,6 +93,9 @@
     <ClCompile Include="src\Context.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\mesh\CursorMesh.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="assets\shaders\Block.shader" />
@@ -1427,6 +1430,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\Context.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\mesh\CursorMesh.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
